--- a/.github/workflows/mabl.yml
+++ b/.github/workflows/mabl.yml
@@ -28,7 +28,7 @@ jobs:
       env:
         MABL_API_KEY: ${{ secrets.MABL_CLI_KEY }}
     steps:
-      - uses: actions/checkout@v3
+      # - uses: actions/checkout@v3
       - name: Authenticate mabl
         run: mabl auth activate-key $MABL_API_KEY
       - name: Run local tests
