--- a/.github/workflows/mabl.yml
+++ b/.github/workflows/mabl.yml
@@ -24,7 +24,8 @@ jobs:
     name: mabl Test
     runs-on: ubuntu-latest
     container:
-      image: mablhq/mabl-cli-chromium
+      # image: mablhq/mabl-cli-chromium
+      image: mablhq/mabl-cli
       env:
         MABL_API_KEY: ${{ secrets.MABL_CLI_KEY }}
     steps:
