--- a/.github/workflows/mabl.yml
+++ b/.github/workflows/mabl.yml
@@ -24,13 +24,12 @@ jobs:
     name: mabl Test
     runs-on: ubuntu-latest
     container:
-      # image: mablhq/mabl-cli-chromium
-      image: mablhq/mabl-cli
+      image: mablhq/mabl-cli-chromium
       env:
         MABL_API_KEY: ${{ secrets.MABL_CLI_KEY }}
     steps:
       # - uses: actions/checkout@v3
-      - name: Authenticate mabl
-        run: mabl auth activate-key $MABL_API_KEY
+      # - name: Authenticate mabl
+      #   run: mabl auth activate-key $MABL_API_KEY
       - name: Run local tests
         run: mabl tests run --labels passing --headless
