--- a/.github/workflows/mabl.yml
+++ b/.github/workflows/mabl.yml
@@ -17,8 +17,8 @@ jobs:
           MABL_API_KEY: ${{ secrets.MABL_API_KEY }}
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         with:
-          application-id: HIvlE0z3cQZ2mDoBCD1AAg-a
-          environment-id: nwwfqkMqWbqq3jPFMfI6sw-e
+          application-id: ${{ secrets.MABL_APPPLICATION_ID }}
+          environment-id: ${{ secrets.MABL_ENVIRONMENT_ID }}
           plan-labels: passing
   
   mabl-local:
