change root path

--- a/.github/workflows/mabl.yml
+++ b/.github/workflows/mabl.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Run mabl tests
-        run: bash ${GITHUB_WORKSPACE}/scripts/mabl-deployment.sh $MABL_API_KEY $MABL_APPLICATION_ID $MABL_ENVIRONMENT_ID
+        run: bash ./scripts/mabl-deployment.sh $MABL_API_KEY $MABL_APPLICATION_ID $MABL_ENVIRONMENT_ID
         env:
           MABL_API_KEY: ${{ secrets.MABL_CLI_KEY }}
           MABL_APPLICATION_ID: ${{ secrets.MABL_APPLICATION_ID }}
