--- a/.github/workflows/mabl.yml
+++ b/.github/workflows/mabl.yml
@@ -10,7 +10,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Run mabl tests
-        run: ./scripts/mabl-deployment.sh $MABL_API_KEY $MABL_APPLICATION_ID $MABL_ENVIRONMENT_ID
+        run: |
+          chmod +x ./scripts/mabl-deployment.sh
+          ./scripts/mabl-deployment.sh $MABL_API_KEY $MABL_APPLICATION_ID $MABL_ENVIRONMENT_ID
         shell: bash
         env:
           MABL_API_KEY: ${{ secrets.MABL_CLI_KEY }}
